# front

./: .gitignore  README.md
cloud/: .gitignore  README.md
cloud/courses/: README.md  SUMMARY.md
cloud/pubsub/: README.md
cloud/pubsub/example/: Makefile  README.md  pyproject.toml
cloud/pubsub/example/example/: constants.py  core.py  main.py
cloud/pubsub/tutorial/: summary.md
cloud/pulumi/: README.md  SUMMARY.md
cloud/pulumi/pulumi_project/: Makefile  Pulumi.dev.yaml  Pulumi.yaml  __main__.py
cloud/vertexai/: README.md
front/: README.md
front/css/: LEARNING.md  Makefile  README.md  index.html  syntax.css
front/ecom_learn/: Makefile
front/ecom_learn/layouts/: default.vue
front/ecom_learn/pages/: about.vue  index.vue
front/ecom_learn/pages/products/: [id].vue  product.vue
front/nuxt_learn/: LEARNING.md
front/nuxt_learn/layouts/: products.vue
front/nuxt_learn/pages/products/: index.vue
front/tailwin_learn/: README.md
front/tailwin_learn/small/: Makefile  package-lock.json  package.json  tailwind.config.js
front/tailwin_learn/small/public/: gpt_product_example.html  index.html  styles.css
front/tailwin_learn/small/src/: styles.css
front/webdesign/: README.md
learning/: 01_basic.js  01_basic.ts  01_helloworld.js  01_helloworld.ts
python/: README.md
python/pydantic/: README.md
typescript/: 00_test.js  Makefile  README.md
typescript/Summaries/: 01_basics.md  02_dom.md
typescript/dom_tutorial/: app.js
